syntax = "proto3";

package messagepb;

option go_package = "message/messagepb/";

message messageing{
    string firstName = 1;
    string lastName = 2;
}

// Unary Request

message messageRequest{
    messageing messageing = 1;
}

message messageResponse{
    string result = 1;
}

// Server Streaming

message messageManyTimeRequest{
    messageing messageing = 1;
}

message messageManyTimeResponse{
    string result = 1;
}

// Client Streaming

message LongmessageRequest{
    messageing messageing = 1;
}

message LongmessageResponse{
    string result = 1;
}

// Bidirectional Stream

message messageEveryOneRequest{
    messageing messageing = 1;
}

message messageEveryOneResponse{
    string result = 2;
}


service messageService{
    
    rpc message(messageRequest) returns (messageResponse);  // Its Just a Function

    rpc messageManyTime (messageManyTimeRequest) returns (stream messageManyTimeResponse);

    rpc Longmessage(stream LongmessageRequest) returns (LongmessageResponse);

    rpc messageEveryone (stream messageEveryOneRequest) returns (stream messageEveryOneResponse);
}
